// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 eIMxjw"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 ekokgP"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 cBBdOI"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-n702wd-1 fEQypv"
  >
    <span
      class="UserProfilestyles__Name-n702wd-2 bnHsEw"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-n702wd-3 dSbhfc"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile as link 1`] = `
<a
  class="Linkstyles__Box-sc-19s6dpo-0 kqCecX"
  href="https://home.raiffeisen.ru"
>
  <span
    class="UserProfilestyles__Box-n702wd-0 eIMxjw"
    role="button"
    tabindex="0"
  >
    <div
      class="Avatarstyles__Box-sc-2qob5o-0 ekokgP"
      title="Super User Name"
    >
      <div
        class="RoundIconstyles__Box-sc-5md3j7-0 dOlcex"
        color="dubai10"
      >
        S
      </div>
      <div
        class="Avatarstyles__ImageLayer-sc-2qob5o-1 ihfKIJ"
      />
    </div>
    <span
      class="UserProfilestyles__Profile-n702wd-1 fEQypv"
    >
      <span
        class="UserProfilestyles__Name-n702wd-2 bnHsEw"
      >
        Super User Name
      </span>
      <span
        class="UserProfilestyles__Description-n702wd-3 dSbhfc"
      >
        Some Description
      </span>
    </span>
  </span>
</a>
`;

exports[`UserProfile w/ any props 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 eIMxjw className"
  id="alarm"
  role="button"
  tabindex="0"
  title="title"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 ekokgP"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 cBBdOI"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-n702wd-1 fEQypv"
  >
    <span
      class="UserProfilestyles__Name-n702wd-2 bnHsEw"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-n702wd-3 dSbhfc"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/ size: m 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 eIMxjw"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 ekokgP"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 cBBdOI"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-n702wd-1 fEQypv"
  >
    <span
      class="UserProfilestyles__Name-n702wd-2 bnHsEw"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-n702wd-3 dSbhfc"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/ size: s 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 eIMxjw"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 XZhVf"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 cBBdOI"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-n702wd-1 fEQypv"
  >
    <span
      class="UserProfilestyles__Name-n702wd-2 eLyEuy"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-n702wd-3 cWnHoF"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/ size: xs 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 eIMxjw"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 ihsxQj"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 cBBdOI"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-n702wd-1 fEQypv"
  >
    <span
      class="UserProfilestyles__Name-n702wd-2 fiUeYF"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-n702wd-3 cWnHoF"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/o align 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 jILASt"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 ekokgP"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 dOlcex"
      color="dubai10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 ihfKIJ"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-n702wd-1 iaSjVk"
  >
    <span
      class="UserProfilestyles__Name-n702wd-2 bnHsEw"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-n702wd-3 dSbhfc"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/o description 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 eIMxjw"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 ekokgP"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 cBBdOI"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-n702wd-1 fEQypv"
  >
    <span
      class="UserProfilestyles__Name-n702wd-2 bnHsEw"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-n702wd-3 dSbhfc"
    />
  </span>
</span>
`;

exports[`UserProfile w/o name and description 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 eIMxjw"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 ekokgP"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
      color="seattle10"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          clip-rule="evenodd"
          d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
          fill-rule="evenodd"
        />
        <path
          d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
        />
      </svg>
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 cBBdOI"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
</span>
`;

exports[`UserProfile w/o photo 1`] = `
<span
  class="UserProfilestyles__Box-n702wd-0 eIMxjw"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-2qob5o-0 ekokgP"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-5md3j7-0 dOlcex"
      color="dubai10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-2qob5o-1 ihfKIJ"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-n702wd-1 fEQypv"
  >
    <span
      class="UserProfilestyles__Name-n702wd-2 bnHsEw"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-n702wd-3 dSbhfc"
    >
      Some Description
    </span>
  </span>
</span>
`;
